prj/rgb2grey/solution1/csim/report/top_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../../src/top_tb.cpp in debug mode
../../../../../src/top_tb.cpp: In function ‘int main()’:
../../../../../src/top_tb.cpp:40:5: error: ‘top’ was not declared in this scope
     top(_src, _dst, HEIGHT, WIDTH);
     ^~~
make: *** [csim.mk:77: obj/top_tb.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
